[package]
name = "envfury"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Utilities for procedural reading of the env varaibles."
repository = "https://github.com/MOZGIII/envfury.git"
keywords = ["env", "settings", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
